Trying to port to jquery

--- a/site/styling.html
+++ b/site/styling.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1; user-scalable=0;" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 <title>Uranium JS | Styling</title>
 <link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
 <link href="/stylesheets/main.css" rel="stylesheet" />
-<script src="/src/uranium-pretty.js"></script>
+<script src="/src/jquery-1.9.1.js"></script>
+<script src="/src/jQuery.uranium.js"></script>
 
   </head>
   
