--- a/site/widget_list.html
+++ b/site/widget_list.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1; user-scalable=0;" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 <title>Uranium JS | Widget List</title>
 <link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
 <link href="/stylesheets/main.css" rel="stylesheet" />
-<script src="/src/uranium-pretty.js"></script>
+<script src="/src/jquery-1.9.1.js"></script>
+<script src="/src/jQuery.uranium.js"></script>
 
   </head>
   
@@ -19,6 +20,17 @@
 
     <div id="textbody">
   <h1>Widgets</h1>
+  <div id="widget_detail">
+    <h2>Widgets Included in Uranium</h2>
+    <ul>
+      <li> <a href="widgets/carousel.html"> Carousel </a> </li>
+      <li> <a href="widgets/input_clear.html"> Input Clear </a> </li>
+      <li> <a href="widgets/geocode.html"> Reverse Geocode </a></li>
+      <li> <a href="widgets/tabs.html"> Tabs </a> </li>
+      <li> <a href="widgets/toggler.html"> Toggler </a> </li>
+      <li> <a href="widgets/zoom.html"> Zoom </a></li>
+    </ul>
+  </div>
   <div>
     <h2>What is a Widget?</h2>
     <div>
@@ -42,17 +54,6 @@
         charts.
       </p>
     </div>
-  </div>
-  <div id="widget_detail">
-    <h2>Widgets Included in Uranium</h2>
-    <ul>
-      <li> <a href="widgets/carousel.html"> Carousel </a> </li>
-      <li> <a href="widgets/tabs.html"> Tabs </a> </li>
-      <li> <a href="widgets/toggler.html"> Toggler </a> </li>
-      <li> <a href="widgets/geocode.html"> Reverse Geocode </a></li>
-      <li> <a href="widgets/zoom.html"> Zoom </a></li>
-       <li> <a href="widgets/input_clear.html"> Input Clear </a> </li>
-    </ul>
   </div>
   
 </div>
