--- a/site/widgets/zoom.html
+++ b/site/widgets/zoom.html
@@ -2,44 +2,44 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1; user-scalable=0;" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 <title>Uranium JS | Zoom</title>
 <link href="http://fonts.googleapis.com/css?family=Crete+Round:400italic|Open+Sans:300,300italic,400|Ultra|Yellowtail" rel="stylesheet" />
 <link href="/stylesheets/main.css" rel="stylesheet" />
-<script src="/src/uranium-pretty.js"></script>
+<script src="/src/jquery-1.9.1.js"></script>
+<script src="/src/jQuery.uranium.js"></script>
 
     <link href="/stylesheets/jasmine.css" rel="stylesheet" />
-    <script src="/src/uranium-pretty.js"></script>
-    <script>
-    describe = function(){};
-    dev_mode = false;//location.hostname == "localhost";
-    if (dev_mode)
-      document.write('<script src="..\/src\/jasmine.js"><\/script>\
-                      <script src="..\/src\/jasmine-html.js"><\/script>\
-                      <script src="..\/src\/jquery-1.7.2.min.js"><\/script>\
-                      <script src="..\/src\/synthetic.js"><\/script>\
-                      <script src="..\/src\/mouse.js"><\/script>\
-                      <script src="..\/src\/browsers.js"><\/script>\
-                      <script src="..\/src\/key.js"><\/script>\
-                      <script src="..\/src\/drag.js"><\/script>');
-    </script>
-    <script>
-    if (dev_mode)
-      (function() {
-        var jasmineEnv = jasmine.getEnv();
-        jasmineEnv.updateInterval = 250;
+    // <script>
+    // describe = function(){};
+    // dev_mode = false;//location.hostname == "localhost";
+    // if (dev_mode)
+    //   document.write('<script src="..\/src\/jasmine.js"><\/script>\
+    //                   <script src="..\/src\/jasmine-html.js"><\/script>\
+    //                   <script src="..\/src\/jquery-1.7.2.min.js"><\/script>\
+    //                   <script src="..\/src\/synthetic.js"><\/script>\
+    //                   <script src="..\/src\/mouse.js"><\/script>\
+    //                   <script src="..\/src\/browsers.js"><\/script>\
+    //                   <script src="..\/src\/key.js"><\/script>\
+    //                   <script src="..\/src\/drag.js"><\/script>');
+    // </script>
+    // <script>
+    // if (dev_mode)
+    //   (function() {
+    //     var jasmineEnv = jasmine.getEnv();
+    //     jasmineEnv.updateInterval = 250;
       
-        var jsApiReporter;
-        var htmlReporter = new jasmine.HtmlReporter();
-          jasmineEnv.addReporter(htmlReporter);
+    //     var jsApiReporter;
+    //     var htmlReporter = new jasmine.HtmlReporter();
+    //       jasmineEnv.addReporter(htmlReporter);
 
-          jasmineEnv.specFilter = function(spec) {
-            return htmlReporter.specFilter(spec);
-          };
+    //       jasmineEnv.specFilter = function(spec) {
+    //         return htmlReporter.specFilter(spec);
+    //       };
 
-          window.onload = function() { jasmineEnv.execute(); };
-        })();
-    </script>
+    //       window.onload = function() { jasmineEnv.execute(); };
+    //     })();
+    // </script>
   </head>
   
   <body id="zoom_page" class="widget_page">
