Removed jump to and added new example for carousel.html

--- a/site/widgets/lateload.html
+++ b/site/widgets/lateload.html
@@ -10,7 +10,7 @@
 <script src="/src/jQuery.uranium.js"></script>
 
     <link href="/stylesheets/jasmine.css" rel="stylesheet" />
-    // <script>
+    <script>
     // describe = function(){};
     // dev_mode = false;//location.hostname == "localhost";
     // if (dev_mode)
@@ -22,8 +22,8 @@
     //                   <script src="..\/src\/browsers.js"><\/script>\
     //                   <script src="..\/src\/key.js"><\/script>\
     //                   <script src="..\/src\/drag.js"><\/script>');
-    // </script>
-    // <script>
+    </script>
+    <script>
     // if (dev_mode)
     //   (function() {
     //     var jasmineEnv = jasmine.getEnv();
@@ -39,7 +39,7 @@
 
     //       window.onload = function() { jasmineEnv.execute(); };
     //     })();
-    // </script>
+    </script>
   </head>
   
   <body id="lateload_page" class="widget_page">
