--- a/widgets/carousel.html
+++ b/widgets/carousel.html
@@ -62,7 +62,7 @@ instance:
   '"slidestart"': event is fired on view_container when sliding begins (excluding touch input)
   '"slideend"': event is fired on view_container when sliding ends
 ---
-// <script>
+<script>
 // if (dev_mode) {
 //   var carouselHtml;
 //   x$(document).on("DOMContentLoaded", function() {
@@ -192,10 +192,50 @@ instance:
 //     });
 //   });
 // });
-// </script>
+</script>
   <div class="wrapper">
     <h2> Demonstration </h2>
-
+    <div class="ur_ex" data-ur-set="tabs">
+      <h3 data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</h3>
+      <h3 data-ur-tabs-component="button" data-ur-tab-id="code" data-ur-state="disabled">The Code</h3>
+        <div class="example" id="carousel" data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
+          <div id="excarousel">
+            <a href="{{site.url}}/widgets/carousel.html"><div id="extitle">Carousel</div></a>
+            <div data-ur-set="carousel" data-ur-touch="disabled" data-ur-state="enabled">
+              <div data-ur-carousel-component="view_container" data-ur-clones="2">
+                <div data-ur-carousel-component="scroll_container">
+                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov1.JPG"/>
+                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov2.JPG"/>
+                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov3.JPG"/>
+                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov4.JPG"/>
+                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov5.JPG"/>
+                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov6.jpg"/>
+                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov7.jpg"/>
+                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov8.jpg"/>
+                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov9.png"/>
+                </div> <!-- scroll_container end -->
+                <div class="cbutton" id="exback" data-ur-carousel-component="button" data-ur-carousel-button-type="prev">&lt;</div>
+                <div class="cbutton" id="exnext" data-ur-carousel-component="button" data-ur-carousel-button-type="next" data-ur-state="enabled">&gt;</div>
+              </div><!-- view container end -->
+            </div>
+          </div>
+        </div><!-- exampleend-->
+        <div class="mainpage_code" id="carouselcode" data-ur-tabs-component="content" data-ur-tab-id="code" data-ur-state="disabled">
+      {% highlight html %}
+      <div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-touch="disabled">
+        <div data-ur-carousel-component="scroll_container">
+          <img data-ur-carousel-component="item" src="1.jpg" />
+          <img data-ur-carousel-component="item" src="2.jpg" />
+          <img data-ur-carousel-component="item" src="3.jpg" />
+          <img data-ur-carousel-component="item" src="4.jpg" />
+        </div>
+        <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">&lt;</div>
+        <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">&gt;</div>
+      </div>
+      {% endhighlight %}
+    </div><!-- codeend-->
+  </div>
+  <hr />
     <div class="demonstration">
       <p> Touch-enabled Widget </p>
       <div id="carousel_demonstration" data-ur-set="tabs">
@@ -360,7 +400,7 @@ instance:
 
     <hr />
 
-    <div class="test">
+<!--     <div class="test">
       <a id="jumpto"></a>
       <h3> "Jump to..." function </h3>
 
@@ -370,16 +410,16 @@ instance:
         of the carousel will the feature be enabled.
       </p>
 
-{% highlight html %}
-<script type="text/javascript">
-  x$("[data-ur-carousel-component='item']").click(function(e) {
-    console.log("You clicked:", e.target.src);
-  });
-  x$("#jump").click(function() {
-    Ur.Widgets["carousel"]["MyFirstCarousel"].jump_to_index(4);
-  });
-</script>
-{% endhighlight %}
+      {% highlight html %}
+      <script type="text/javascript">
+        x$("[data-ur-carousel-component='item']").click(function(e) {
+          console.log("You clicked:", e.target.src);
+        });
+        x$("#jump").click(function() {
+          Ur.Widgets["carousel"]["MyFirstCarousel"].jump_to_index(4);
+        });
+      </script>
+      {% endhighlight %}
 
       <p id="jump" onclick="Ur.Widgets.carousel.JumpCarousel.jumpToIndex(4)">Jump to 5th item</p>
 
@@ -398,6 +438,6 @@ instance:
           <img data-ur-carousel-component="item" src='{{site.url}}../images/sample8.png' alt="8" />
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
