--- a/widgets/carousel.html
+++ b/widgets/carousel.html
@@ -195,57 +195,16 @@ instance:
 </script>
   <div class="wrapper">
     <h2> Demonstration </h2>
-    <div class="ur_ex" data-ur-set="tabs">
-      <h3 data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</h3>
-      <h3 data-ur-tabs-component="button" data-ur-tab-id="code" data-ur-state="disabled">The Code</h3>
-        <div class="example" id="carousel" data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
-          <div id="excarousel">
-            <a href="{{site.url}}/widgets/carousel.html"><div id="extitle">Carousel</div></a>
-            <div data-ur-set="carousel" data-ur-touch="disabled" data-ur-state="enabled">
-              <div data-ur-carousel-component="view_container" data-ur-clones="2">
-                <div data-ur-carousel-component="scroll_container">
-                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov1.JPG"/>
-                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov2.JPG"/>
-                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov3.JPG"/>
-                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov4.JPG"/>
-                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov5.JPG"/>
-                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov6.jpg"/>
-                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov7.jpg"/>
-                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov8.jpg"/>
-                  <img data-ur-carousel-component="item" src="/stylesheets/resources/moov9.png"/>
-                </div> <!-- scroll_container end -->
-                <div class="cbutton" id="exback" data-ur-carousel-component="button" data-ur-carousel-button-type="prev">&lt;</div>
-                <div class="cbutton" id="exnext" data-ur-carousel-component="button" data-ur-carousel-button-type="next" data-ur-state="enabled">&gt;</div>
-              </div><!-- view container end -->
-            </div>
-          </div>
-        </div><!-- exampleend-->
-        <div class="mainpage_code" id="carouselcode" data-ur-tabs-component="content" data-ur-tab-id="code" data-ur-state="disabled">
-      {% highlight html %}
-      <div data-ur-set="carousel" data-ur-carousel-component="view_container" data-ur-touch="disabled">
-        <div data-ur-carousel-component="scroll_container">
-          <img data-ur-carousel-component="item" src="1.jpg" />
-          <img data-ur-carousel-component="item" src="2.jpg" />
-          <img data-ur-carousel-component="item" src="3.jpg" />
-          <img data-ur-carousel-component="item" src="4.jpg" />
-        </div>
-        <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">&lt;</div>
-        <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">&gt;</div>
-      </div>
-      {% endhighlight %}
-    </div><!-- codeend-->
-  </div>
-  <hr />
-    <div class="demonstration">
+    <div>
       <p> Touch-enabled Widget </p>
-      <div id="carousel_demonstration" data-ur-set="tabs">
-        <h3 data-ur-tabs-component="button" data-ur-tab-id="widget" data-ur-state="enabled"> Widget</h3>
+      <div id="carousel_demonstration" data-ur-set="tabs" class="ur_ex">
+        <h3 data-ur-tabs-component="button" data-ur-tab-id="widget" data-ur-state="enabled"> Example</h3>
 
-        <h3 data-ur-tabs-component="button" data-ur-tab-id="html">HTML</h3>
+        <h3 data-ur-tabs-component="button" data-ur-tab-id="html">The Code</h3>
 
-        <h3 data-ur-tabs-component="button" data-ur-tab-id="CSS">CSS</h3>
+<!--         <h3 data-ur-tabs-component="button" data-ur-tab-id="CSS">CSS</h3> -->
 
-        <div id="carousel_widget" class="example_widget"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
+        <div id="carousel_widget" class="example_widget example"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
 
           <div data-ur-set="carousel" data-ur-id="MyFirstCarousel">
             <span data-ur-carousel-component="count"> -- count -- </span>
@@ -287,7 +246,7 @@ instance:
           {% endhighlight %}
         </div>
 
-        <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="CSS">
+<!--         <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="CSS">
           {% highlight css %}
           div[data-ur-carousel-component="view_container"] {
             width: 100%;
@@ -301,8 +260,9 @@ instance:
             opacity: 0.3;
           }
           {% endhighlight %}
-        </div>
+        </div> -->
       </div>
+      <hr />
     </div>
     <div>
       <p>More examples of the carousel can be found here, including:</p>
